# crispy-fishstick

./: .gitignore  .pre-commit-config.yaml  CAHIER DES CHARGE.md  CATALOGUE_COMMANDES_TEMPLATES.md  COPY_PASTE.md  CORRECTION TEST.md  DISCLAIMER.md  GEMINI.md  GUIDE_UTILISATION_RAPIDE.md  HYDRODRAIN.md  LICENSE.md  MODIF.md  PARTAGE.md  PHASE0_IMPROVEMENTS_SUMMARY.md  PHASE2_FINAL_REPORT.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE3_IMPLEMENTATION_SUMMARY.md  Plan d'Action Détaillé - Harmonisation Hydraulique et Validation du Projet.md  RAPPORT_DISCUSSION_PHASE3_DEBOGAGE.md  README.md  README_LICENCE_ADMIN.md  README_PRICEDB_IMPLEMENTATION.md  README_SCRIPTS.md  RESUME_AMELIORATIONS.md  RESUME_AMELIORATIONS_EXTRACTION.md  RESUME_AMELIORATION_V15.md  RESUME_FINAL_NESTED_RESULTS.md  RESUME_FINAL_PROBLEME_RESOLU.md  RESUME_FINAL_TEMPLATES_COMPLETS.md  RETOUR EXP.md  Reseaux_2.xlsx  SYNTHESE_FINALE_AMELIORATIONS.md  Sans titre 1.md  Sans titre 10.md  Sans titre 11.md  Sans titre 2.md  Sans titre 3.md  Sans titre 4.md  Sans titre 5.md  Sans titre 6.md  (+198 more)
.idx/: dev.nix
.obsidian/: workspace.json
AMELIORATION/: calcul_adduction.py  calcul_distribution.py  calcul_entretien.py  gestion_maintenance_diametres.py  production_pop.py  reservoir.py
ASSAINISSEMENT/: .gitignore  dimensionnement.py  dimensionnement_V2.py  essaie.csv  install.sh  tabl.csv
BA/: ba_entry.py  test.py
config/: pyproject.toml
data/: ASS1.csv  canaux_a_dimensionner.csv  classes_bois.csv  poteaux_a_calculer.csv  poutres_a_calculer.csv  poutres_bois_a_verifier.csv  profils_acier.csv  profils_ipe.csv
docs/: A FAIRE.md  AEP 2.md  AEP.md  AMELIORATION.md  AMELIORATION_15_PLAN.md  AMELIORATION_RAPPORTS.md  AMELIORATION_V10.md  AMELIORATION_V10_plan.md  AMELIORATION_V11_plan.md  AMELIORATION_V12.md  AMELIORATION_V13.md  AMELIORATION_V14.md  AMELIORATION_V15.md  AMELIORATION_V16_PLAN  AMELIORATION_V7.md  AMELIORATION_V8.md  AMELIORATION_V9.md  (+90 more)
(+1471 files in other folders)
