[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcpi-cli"
version = "2.0.0"
requires-python = ">=3.8"
dependencies = [
    "typer[all]", "PyYAML", "pandas", "matplotlib", "reportlab", "scipy"
]

[project.scripts]
lcpi = "lcpi.main:app"

[tool.setuptools]
packages = ["lcpi", "lcpi.utils"]
